# HolaMundoJAVA

./: CMakeLists.txt  File  Makefile  README.md  flows.json  holamundo.java  sdkconfig  sdkconfig.old  sdkconfigS
Pom2/: PomodoroTimer.java
Pomodoro/: InterfazCronometro.java  core.java
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  deep.c  deep.h  i2c.c  i2c.h  mqtt.c  mqtt.h  provisionamiento.c  provisionamiento.h  server.c  server.h  tareas.c  tareas.h
main/certs/: cacert.pem  prvtkey.pem
